borsh-derive-internal/src/snapshots/borsh_derive_internal__enum_de__tests__borsh_skip_tuple_variant_field.snap
---
source: borsh-derive-internal/src/enum_de.rs
expression: pretty_print_syn_str(&actual)
---
impl borsh::de::BorshDeserialize for AAT
where
    u32: borsh::BorshDeserialize,
    u8: borsh::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl borsh::de::EnumExt for AAT
where
    u32: borsh::BorshDeserialize,
    u8: borsh::BorshDeserialize,
{
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0 {
            AAT::B(
                Default::default(),
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else if variant_tag == 0 + 1 {
            AAT::NegatedVariant {
                beta: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

