borsh-derive-internal/src/snapshots/borsh_derive_internal__enum_de__tests__recursive_enum.snap
---
source: borsh-derive-internal/src/enum_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Key, V> borsh::de::BorshDeserialize for A<K, V>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<K: Key, V> borsh::de::EnumExt for A<K, V>
where
    V: Value,
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            A::B {
                x: borsh::BorshDeserialize::deserialize_reader(reader)?,
                y: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::C(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

